--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -22,7 +23,7 @@
 
     <form action="method">
       <fieldset>
-        <legend>Contact Information</legend>
+        <legend class="head">Contact Information</legend>
         <div class="form1">
           <label for="fullname">Full Name</label><br>
           <input type="text" name="fullname" id="fullname" placeholder="Required"/><br>
@@ -81,9 +82,9 @@
         <p>Newsletter format</p>
         <input type="radio" name="format" id="format" value="format"/>
         <label for="format">HTML</label><br>
-
-        <input type="radio" name="text" id="text" value="textformat"/>
-        <label for="text">Plain text</label><br>
+        
+        <input type="radio" name="format" id="textformat" value="textformat"/>
+        <label for="format">Plain text</label><br>
         
         <label for="topics">Other topics you'd like to hear about</label><br>
         <textarea name="topics" id="topics"></textarea><br>
