--- a/static/index.html
+++ b/static/index.html
@@ -31,12 +31,12 @@
 
         <div class="form1">
           <label for="email">Email Address</label><br>
-          <input type="text" name="email" id="email" placeholder="Required" /><br>
+          <input type="email" name="email" id="email" placeholder="Required" /><br>
         </div>
 
         <div class="form1">
           <label for="number">Phone Number</label><br>
-          <input type="text" name="number" id="number"/><br>
+          <input type="tel" name="number" id="number"/><br>
         </div>
 
         <div class="form1">
