--- a/static/index.html
+++ b/static/index.html
@@ -58,10 +58,10 @@
             <option value="del">Delaware</option>
           </select><br>
         </div>
-
+        
         <div class="form1">
           <label for="zip">Zip Code</label><br>
-          <input type="text" name="zip" id="zip"/><br>
+          <input class="zip" type="text" name="zip" id="zip"/><br>
         </div>
         <hr>
         
