--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Registration Form</title>
     <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
-    <link rel="stylesheet" href="../style/styles.css" />
+    <link rel="stylesheet" href="style/styles.css" />
 </head>
 
 <body>
